# NvChad

./: .gitignore  .gitmodules  .ignore  .lua-format  .stylelua.toml  .stylua.toml  CONTRIBUTING.md  README.md  ]  build.sh  chadrc.lua  default.nix  deno.json  deno.jsonc  flake.nix  init.bak  init.lua  init.sh  init_bak.lua  install  install.sh  keyssheet_nvchad.md  lazy-lock.json  mappings.lua  nv  plugins.lua  rplugin.vim  stylua.toml  test.fsx
.github/: CONTRIBUTING.md  FUNDING.yml  (+1 more)
tree-sitter-c/: .appveyor.yml  .gitignore  .npmignore  .travis.yml  Cargo.toml  LICENSE  Package.swift  README.md  binding.gyp  grammar.js  package.json
tree-sitter-c/bindings/node/: binding.cc  index.js
tree-sitter-c/bindings/rust/: README.md  build.rs  lib.rs
tree-sitter-c/examples/: malloc.c  parser.c
tree-sitter-c/src/: grammar.json  node-types.json  parser.c
tree-sitter-c/test/corpus/: ambiguities.txt  crlf.txt  declarations.txt  expressions.txt  microsoft.txt  preprocessor.txt  statements.txt  types.txt
tree-sitter-c/test/highlight/: keywords.c  names.c
tree-sitter-lua/: .gitignore  .prettierignore  Cargo.toml  LICENSE.md  README.md  binding.gyp  grammar.js  package.json
tree-sitter-lua/.github/workflows/: ci.yml
tree-sitter-lua/bindings/node/: binding.cc  index.js
tree-sitter-lua/bindings/rust/: build.rs  lib.rs
tree-sitter-lua/examples/: init.lua
tree-sitter-lua/script/: parse-examples  release.sh
tree-sitter-lua/src/: grammar.json  node-types.json  parser.c  scanner.c
tree-sitter-lua/test/corpus/: chunk.txt  comments.txt  expressions.txt  statements.txt
(+548 files in other folders)
